kubernetes/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap-clientes-api-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 3000}]'
spec:
  rules:
    - http:
        paths:
          - path: /clientes/*
            pathType: Prefix
            backend:
              service:
                name: fiap-clientes-api-service
                port:
                  number: 3000
